--- a/table.css
+++ b/table.css
@@ -1,5 +1,7 @@
 .st-table-container {
 	min-width: 360px;
+	font-family: 'Open Sans';
+	color: #444;
 }
 
 .st-table-wrapper {
@@ -11,6 +13,7 @@
 .st-table-outer {
 	overflow-x: auto;
 	padding-bottom: 2px;
+	padding-top: 10px;
 }
 
 .st-table-outer::-webkit-scrollbar {
@@ -70,7 +73,7 @@
 }
 
 .st-table th {
-	border: 1px dashed #a7a7aa;
+	border: 1px solid #a7a7aa;
 	background-color: transparent;
 	font-weight: normal;
 	cursor: pointer;
@@ -82,6 +85,7 @@
 
 .st-table td {
 	border: 1px solid #cccccc;
+	padding: 5px 10px;
 }
 
 .st-table-editable:focus {
@@ -111,7 +115,7 @@
 }
 
 .st-table .st-table-selected {
-	background-color: #eaf2f9;
+	background-color: #E8F0FD;
 }
 
 .st-table-editable {
@@ -139,19 +143,23 @@
 	left: 0;
 	z-index: 99999;
 	background-color: #fff;
-	border: 1px solid #cccccc;
 	color: #474747;
-	font-size: 13px;
+	font-size: 12px;
 	-webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
-	box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
+	box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
+	border-radius: 2px;
 }
 
 .st-table-menu li {
 	display: block;
-	font-size: 13px;
-	padding: 9px 7px;
+	font-size: 12px;
+	padding: 8px 16px;
 	border-bottom: 1px solid #ddd;
 	cursor: pointer;
+}
+
+.st-table-menu li:last-child {
+	border-bottom: none;
 }
 
 .st-table-menu li:hover {
@@ -162,21 +170,26 @@
 	text-align: center;
 	height: 27px;
   vertical-align: middle;
-  background-color: #f2f2f2;
+  background-color: #F8F9FA;
 }
 
 .st-table-header .selected {
-	background-color: #eaf2f9;
+	background-color: #E8F0FD;
 }
 
 .st-table-side.selected {
-	background-color: #eaf2f9;
+	background-color: #E8F0FD;
 }
 
 .st-table .st-table-side {
 	text-align: center;
   position: relative;
-  background-color: #f2f2f2;
+  background-color: #F8F9FA;
+}
+
+.st-table-btn-group-list {
+	border-top: 1px solid #dadce0;
+	border-bottom: 1px solid #dadce0;
 }
 
 .st-table-btn-group-list:after {
@@ -195,21 +208,24 @@
 .st-table-btn,
 .st-table-btn-active {
 	border-radius: 3px;
-	background-color: #f2f2f2;
+	background: transparent;
 	text-decoration: none;
 	text-align: center;
 	font-size: 14px;
 	line-height: 1;
 	color: #333333;
 	display: table-cell;
-	border-left: none;
-	border: 1px solid #a7a7aa;
+	border: none;
 	font-size: 12px;
 	padding: 3px 5px;
-	border-radius: 0;
+	border-radius: 3px;
 	display: table-cell;
 	height: 28px;
-	border-right: none;
+	cursor: pointer;
+}
+
+.st-table-btn:hover {
+	background-color: #F0F3F4;
 }
 
 .st-table-btn-active {
@@ -218,17 +234,6 @@
 	box-shadow: inset 0 1px 2px #b2b2b2;
 	color: #333;
 	text-decoration: none;
-}
-
-.st-table-btn:first-child {
-	border-top-left-radius: 3px;
-	border-bottom-left-radius: 3px;
-}
-
-.st-table-btn:last-child {
-	border-top-right-radius: 3px;
-	border-bottom-right-radius: 3px;
-	border-right: 1px solid #a7a7aa;
 }
 
 .st-table-selector {
@@ -464,7 +469,7 @@
 }
 
 .st-table-close-btn {
-  background-color: #f2f2f2;
+  background-color: #F8F9FA;
   text-decoration: none;
   text-align: center;
   font-size: 14px;
@@ -511,7 +516,7 @@
 }
 
 .st-table-modal-btn {
-  background-color: #f2f2f2;
+  background-color: #F8F9FA;
   text-decoration: none;
   text-align: center;
   font-size: 14px;
